rendered/envs/demo/rabbitmq-operator/networkpolicy-rabbitmq-cluster-operator.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    a8r.io/repository: https://github.com/kbudde/k8s-demo
  labels:
    app.kubernetes.io/component: rabbitmq-operator
    app.kubernetes.io/instance: rabbitmq-cluster-operator
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: rabbitmq-cluster-operator
    app.kubernetes.io/part-of: rabbitmq
    app.kubernetes.io/version: 2.16.0
    helm.sh/chart: rabbitmq-cluster-operator-4.4.27
  name: rabbitmq-cluster-operator
  namespace: rabbitmq-operator
spec:
  egress:
    - {}
  ingress: null
  podSelector:
    matchLabels:
      app.kubernetes.io/component: rabbitmq-operator
      app.kubernetes.io/instance: rabbitmq-cluster-operator
      app.kubernetes.io/name: rabbitmq-cluster-operator
      app.kubernetes.io/part-of: rabbitmq
  policyTypes:
    - Ingress
    - Egress
